<resources>
    <string name="app_name">My Application</string>
    <string name="working_with_images">How to work with image?</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="save_data">Save Data</string>
    <string name="show_password_box">Show Password Box</string>
    <string name="send_data">Send Data</string>
    <string name="autolink_test">Name: New York Times \n
           Email: public@nytimes.com \n
           Phone: 212-556-7652 \n
           Address: 620 Eighth Avenue New York, NY 10018  \n
           Address: 620 Eighth avenue New York, NY 10018  \n
           Website: http://www.nytimes.com
    </string>
    <string name="take_photo">Take Photo</string>
</resources>